# gh-pulse

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ingest.yml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/languages/: route.ts
frontend/app/api/search/: route.ts
frontend/app/api/stats/: route.ts
frontend/app/api/trending/: route.ts
frontend/app/languages/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: ActivityTimeline.tsx  LanguageDistribution.tsx  TrendingRepos.tsx  VelocityChart.tsx
frontend/hooks/: useWebSocket.ts
scripts/: ingest_events.py  init-db.sql  start-dev.sh
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/: __init__.py  cache.py  config.py  db.py  main.py  middleware.py
services/api/src/routers/: __init__.py  search.py  stats.py  trending.py  websocket.py
services/api/tests/: conftest.py  test_cache.py  test_middleware.py  test_trending.py
services/ingestion/: Dockerfile  README.md  pyproject.toml
services/ingestion/src/: __init__.py  config.py  main.py  poller.py
services/processor/: Dockerfile  README.md  pyproject.toml
services/processor/src/: __init__.py  config.py  consumer.py  main.py
services/processor/tests/: __init__.py  conftest.py  test_consumer.py
services/shared/: pyproject.toml
services/shared/src/shared/: __init__.py  constants.py  db_utils.py  velocity.py
